<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/mainColor"
        android:gravity="center"
        android:text="@string/protocol_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/protocol"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#959595" />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button"
        android:text="@string/ok"
        android:textColor="#ffffff" />

</LinearLayout>