<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/mainColor"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:layout_below="@id/title"
        android:background="@drawable/header" />

    <Button
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/header"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button"
        android:text="@string/check"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/header"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_toLeftOf="@id/check"
        android:layout_toStartOf="@id/check"
        android:background="@drawable/input"
        android:ems="10"
        android:hint="@string/tip"
        android:inputType="phone"
        android:maxLength="11" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="48dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/part" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/part"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#959595" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/all" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/all"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#959595" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/owner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/owner"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#959595" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>