<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/mainColor"
        android:gravity="center"
        android:text="@string/house_details"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="214dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="详情"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="12dp"
            android:text="价格"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/mainColor" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/mainColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="桃白白"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/court"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

        <TextView
            android:id="@+id/court"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="桃白白"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/owner_tip"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:textColor="#999999" />-->

        <TextView
            android:id="@+id/owner_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="桃白白"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#999999" />

    </LinearLayout>


</LinearLayout>